--- a/style.css
+++ b/style.css
@@ -114,3 +114,41 @@ footer {
 .links a:hover {
     color: #fff;
 }
+
+.container.article {
+    text-align: left;
+    max-width: 800px;
+    margin: 5rem auto;
+    padding: 2rem;
+    background: rgba(255, 255, 255, 0.05);
+    border-radius: 1rem;
+}
+
+.container.article h1 {
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+.container.article h2 {
+    font-size: 2rem;
+    font-weight: 600;
+    color: #FF5B7A;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+}
+
+.container.article ul {
+    list-style-position: inside;
+    padding-left: 1rem;
+    margin-bottom: 1rem;
+}
+
+.container.article li {
+    margin-bottom: 0.5rem;
+}
+
+.article-footer {
+    position: relative;
+    margin-top: 2rem;
+    padding-bottom: 2rem;
+}
