--- a/style.css
+++ b/style.css
@@ -171,3 +171,9 @@ footer {
     margin-top: 2rem;
     padding-bottom: 2rem;
 }
+
+.copyright {
+    margin-top: 1rem;
+    font-size: 0.875rem;
+    color: #aaa;
+}
